Move website to Jekyll now

--- a/authors.html
+++ b/authors.html
@@ -1,21 +1,10 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Authors</title>
-    <meta name="author" content="Evgeniy Alekseev" />
-    <meta name="description" content="arcanis' homepage" />
-    <link rel="license" type="text/html" href="/LICENSE" />
-
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <link rel="shortcut icon" href="/resources/icon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+---
+layout: default
+comment: false
+share: false
+back: 2
+title: Authors
+---
   <body>
     <div class="wrapper">
       <header>
@@ -42,15 +31,3 @@ Evgeniy Alekseev wrote this file. As long as you retain this notice you can do w
 <p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
 
 <p align="center">&copy; Evgeniy Alekseev, 2014</p>
-
-      </section>
-      <footer>
-        <p class="view"><a href="javascript:history.back()">Back</a><br>
-                        <a href="/">Back to Homepage</a></p>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
-    </div>
-    <script src="/javascripts/scale.fix.js"></script>
-
-  </body>
-</html>
