--- a/projects/index.html
+++ b/projects/index.html
@@ -1,137 +1,113 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>My projects</title>
-    <meta name="author" content="Evgeniy Alekseev" />
-    <meta name="description" content="arcanis' homepage" />
-    <link rel="license" type="text/html" href="/LICENSE" />
-
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <link rel="shortcut icon" href="/resources/icon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!-- sharethis -->
-    <script type="text/javascript">var switchTo5x=false;</script>
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">stLight.options({publisher: "70dd9cde-7276-47af-8de7-9c43883daf2b", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
-  </head>
+---
+layout: default
+title: My projects
+comment: false
+share: true
+back: 1
+groups:
+    - title: Linux daemons
+      short: daemons
+      projects:
+          - title: git-etc
+            short: git-etc
+            description: <code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.
+            links:
+                - <a href="/projects/git-etc">Homepage</a>
+                - <a href="https://github.com/arcan1s/git-etc">GitHub repo</a>
+                - Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a>
+          - title: queued
+            short: queued
+            description: <code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.
+            links:
+                - <a href="/projects/queued">Homepage</a>
+                - <a href="https://github.com/arcan1s/queued">GitHub repo</a>
+    - title: KDE widgets
+      short: widgets
+      projects:
+          - title: DeadLine widget
+            short: deadline
+            description: <code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.
+            links:
+                - <a href="https://github.com/arcan1s/deadlinewidget">GitHub repo</a>
+          - title: Oblikue strategies
+            short: oblikuestrategies
+            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">GNOME applet</a> fork with some of special features.
+            links:
+                - <a href="/projects/oblikuestrategies">Homepage</a>
+                - <a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a>
+                - Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a>
+                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR package</a>
+          - title: Open on desktop
+            short: openondesktop
+            description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
+            links:
+                - <a href="https://github.com/arcan1s/openondesktop">GitHub repo</a>
+          - title: py-text-monitor
+            short: pytextmonitor
+            description: <code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
+            links:
+                - <a href="/projects/pytextmonitor">Homepage</a>
+                - <a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a>
+                - Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a>
+                - DataEngine page on <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a>
+                - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR package</a>
+          - title: Kit system monitor
+            short: sysmon
+            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
+            links:
+                - <a href="https://github.com/arcan1s/sysmon">GitHub repo</a>
+                - Page on <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a>
+    - title: Scientific programs
+      short: science
+      projects:
+          - title: Molecular dynamic
+            short: moldyn
+            description: They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.
+            links:
+                - <a href="/projects/moldyn">Homepage</a>
+                - <a href="https://github.com/arcan1s/moldyn">GitHub repo</a>
+    - title: Utilities
+      short: utilities
+      projects:
+          - title: extract_pkglist
+            short: extpkg
+            description: <code>extract_pkglist</code> a simple script written on <code>Python2</code> for creating list of installed packages in ArchLinux.
+            links:
+                - <a href="https://github.com/arcan1s/extract_pkglist">GitHub repo</a>
+          - title: Food GUI
+            short: foodgui
+            description: <code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.
+            links:
+                - <a href="https://github.com/arcan1s/food_gui">GitHub repo</a>
+                - Archlinux <a href="https://aur.archlinux.org/packages/food_gui">AUR package</a>
+          - title: julius-actions
+            short: julius-actions
+            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
+            links:
+                - <a href="https://github.com/arcan1s/julius-actions">GitHub repo</a>
+---
   <body>
     <div class="wrapper">
       <header>
         <h1>Projects</h1>
-
         <p class="view">The list of some of my projects</p>
-        <p class="view"><a href="#daemons">Linux daemons</a><br>
-                        <a href="#widgets">KDE widgets</a><br>
-                        <a href="#moldyn">Scientific programs</a><br>
-                        <a href="#utilities">Utilities</a></p>
-
+        <p class="view">
+          {% for group in page.groups %}
+            <a href="#{{ group.short }}">{{ group.title }}</a><br>
+          {% endfor %}
+        </p>
       </header>
       <section>
 
-<h2><a name="daemons" class="anchor" href="#daemons"><span class="octicon octicon-link"></span></a>Linux daemons</h2>
-
-<h3><a name="gitetc" class="anchor" href="#gitetc"><span class="octicon octicon-link"></span></a>git-etc</h3>
-<p align="justify"><code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.</p>
-<ul>
-  <li><a href="/projects/git-etc">Homepage</a></li>
-  <li><a href="https://github.com/arcan1s/git-etc">GitHub repo</a></li>
-  <li>Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a></li>
-</ul>
-
-<h3><a name="queued" class="anchor" href="#queued"><span class="octicon octicon-link"></span></a>queued</h3>
-<p align="justify"><code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.</p>
-<ul>
-  <li><a href="/projects/queued">Homepage</a></li>
-  <li><a href="https://github.com/arcan1s/queued">GitHub repo</a></li>
-</ul>
-
-<h2><a name="widgets" class="anchor" href="#widgets"><span class="octicon octicon-link"></span></a>KDE widgets</h2>
-
-<h3><a name="deadlinewidget" class="anchor" href="#deadlinewidget"><span class="octicon octicon-link"></span></a>DeadLine widget</h3>
-<p align="justify"><code>DeadLine widget</code> is a Plasmoid script written on <code>Python2</code>. It is able to create jobs, and add reminders to them. Now this project has a pre-alpha stage. Someday maybe I will complete it.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/deadlinewidget">GitHub repo</a></li>
-</ul>
-
-<h3><a name="oblikuestrategies" class="anchor" href="#oblikuestrategies"><span class="octicon octicon-link"></span></a>oblikue-strategies</h3>
-<p align="justify"><code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405">GNOME applet</a> fork with some of special features.</p>
-<ul>
-  <li><a href="/projects/oblikuestrategies">Homepage</a></li>
-  <li><a href="https://github.com/arcan1s/oblikuestrategies">GitHub repo</a></li>
-  <li>Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503">kde-look.org</a></li>
-  <li>Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies">AUR package</a></li>
-</ul>
-
-<h3><a name="openondesktop" class="anchor" href="#openondesktop"><span class="octicon octicon-link"></span></a>Open on desktop</h3>
-<p align="justify"><code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/openondesktop">GitHub repo</a></li>
-</ul>
-
-<h3><a name="pytextmonitor" class="anchor" href="#pytextmonitor"><span class="octicon octicon-link"></span></a>py-text-monitor</h3>
-<p align="justify"><code>py-text-monitor</code> is a minimalistic Plasmoid script written on <code>Python2</code>. It looks like widgets in <a href="http://awesome.naquadah.org/">Awesome WM</a>. My plasmoid is highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).</p>
-<ul>
-  <li><a href="/projects/pytextmonitor">Homepage</a></li>
-  <li><a href="https://github.com/arcan1s/pytextmonitor">GitHub repo</a></li>
-  <li>Plasmoid page on <a href="http://kde-look.org/content/show.php/Py+Text+Monitor?content=157124">kde-look.org</a></li>
-  <li>DataEngine page on <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773">kde-look.org</a></li>
-  <li>Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-pytextmonitor">AUR package</a></li>
-</ul>
-
-<h3><a name="sysmon" class="anchor" href="#sysmon"><span class="octicon octicon-link"></span></a>Kit System Monitor</h3>
-<p align="justify"><code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/sysmon">GitHub repo</a></li>
-  <li>Page on <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246">kde-look.org</a></li>
-</ul>
-
-<h2><a name="moldyn" class="anchor" href="#moldyn"><span class="octicon octicon-link"></span></a>Molecular dynamic and other scientific programs</h2>
-
-<p align="justify">They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.</p>
-<ul>
-  <li><a href="/projects/moldyn">Homepage</a></li>
-  <li><a href="https://github.com/arcan1s/moldyn">GitHub repo</a></li>
-</ul>
-
-<h2><a name="utilities" class="anchor" href="#utilities"><span class="octicon octicon-link"></span></a>Utilities</h2>
-
-<h3><a name="extract_pkglist" class="anchor" href="#extract_pkglist"><span class="octicon octicon-link"></span></a>Extract pkglist</h3>
-<p align="justify"><code>extract_pkglist</code> a simple script written on <code>Python2</code> for creating list of installed packages in ArchLinux.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/extract_pkglist">GitHub repo</a></li>
-</ul>
-
-<h3><a name="food_gui" class="anchor" href="#food_gui"><span class="octicon octicon-link"></span></a>Food GUI</h3>
-<p align="justify"><code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/food_gui">GitHub repo</a></li>
-  <li>Archlinux <a href="https://aur.archlinux.org/packages/food_gui">AUR package</a></li>
-</ul>
-
-<h3><a name="julius-actions" class="anchor" href="#julius-actions"><span class="octicon octicon-link"></span></a>julius-actions</h3>
-<p align="justify"><code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.</p>
-<ul>
-  <li><a href="https://github.com/arcan1s/julius-actions">GitHub repo</a></li>
-</ul>
-
-      </section>
-      <footer>
-        <p class="view"><a href="/">Back to Homepage</a></p>
-        <p><span class='st_vkontakte'></span>
-           <span class='st_facebook'></span>
-           <span class='st_twitter'></span>
-           <span class='st_googleplus'></span>
-           <span class='st_livejournal'></span><br>
-           <small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
-      </footer>
-    </div>
-    <script src="/javascripts/scale.fix.js"></script>
-
-  </body>
-</html>
+  {% for group in page.groups %}
+    <h1><a name="{{ group.short }}" class="anchor" href="#{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h1>
+    {% for project in group.projects %}
+      <h2><a name="{{ project.short }}" class="anchor" href="#{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
+      <p align="justify">{{ project.description }}</p>
+      <p align="justify"><ul>
+        {% for link in project.links %}
+          <li>{{ link }}</li>
+        {% endfor %}
+      </ul></p>
+    {% endfor %}
+  {% endfor %}
