2014-01-15 - removed custom tags + added normal tags and related pages + moved blog/index to blog

--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -2,10 +2,7 @@
 layout: paper
 date: 14 January 2014
 last: 14 January 2014
-tags:
-    - zshrc
-    - configuration
-    - linux
+tags: zshrc, configuration, linux
 title: About zshrc
 description: It is first paper in my blog (I think I need something here for tests =)). There are many similar articles, and I'll not be an exception. I just want to show my <code>.zshrc</code> and explain what it does and why it is needed. Also any comments or additions are welcome. It is a translated paper from Russian (<a href="http://archlinux.org.ru/forum/topic/12752/">original</a>).
 commentIssueId: 5
