--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Blog
+title: arcanis' blog
 comment: false
 share: false
 back: 1
@@ -16,7 +16,7 @@ posts:
   <body>
     <div class="wrapper">
       <header>
-        <h1>My blog</h1>
+        <h1>arcanis' blog</h1>
       </header>
       <section>
 
