--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: My projects
+title: arcanis' projects
 comment: false
 share: true
 back: 1
@@ -89,7 +89,7 @@ groups:
   <body>
     <div class="wrapper">
       <header>
-        <h1>Projects</h1>
+        <h1>arcanis' projects</h1>
         <p class="view">The list of some of my projects</p>
         <p class="view">
           {% for group in page.groups %}
