yet another test

--- a/_posts/2014-01-14-test1.html
+++ b/_posts/2014-01-14-test1.html
@@ -3,9 +3,9 @@ layout: paper
 date: 14 January 2014
 last: 14 January 2014
 tags: zshrc, configuration, linux
-title: About zshrc
-short: about-zshrc
-description: It is first paper in my blog (I think I need something here for tests =)). There are many similar articles, and I'll not be an exception. I just want to show my <code>.zshrc</code> and explain what it does and why it is needed. Also any comments or additions are welcome. It is a translated paper from Russian (<a href="http://archlinux.org.ru/forum/topic/12752/">original</a>).
+title: test 1
+short: test1
+description: test 1
 commentIssueId: 5
 ---
 <h3><a name="prepare" class="anchor" href="#prepare"><span class="octicon octicon-link"></span></a>Prepare</h2>
