+ added redirection from the main page * translations

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: About me
   <body>
     <div class="wrapper">
       <header>
-        <h1>About me</h1>
+        <h1>{{ page.title }}</h1>
 
         <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
         <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on <code>archlinux.org</code></a><br>
@@ -17,9 +17,9 @@ title: About me
 
         <h2>Contacts</h2>
         <p class="view">Alias: arcanis/arcan1s<br>
-        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a> <br>
+        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
         ICQ: 407-398-235<br>
-        Jabber: arcanis (at) jabber (dot) org<br>
+        Jabber: arcanis (at) jabber (dot) ru<br>
         E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
 
       </header>
