--- a/authors.html
+++ b/authors.html
@@ -8,7 +8,7 @@ title: Authors
   <body>
     <div class="wrapper">
       <header>
-        <h1>Authors</h1>
+        <h1>{{ page.title }}</h1>
       </header>
       <section>
 
