--- a/projects/index.html
+++ b/projects/index.html
@@ -89,7 +89,7 @@ groups:
   <body>
     <div class="wrapper">
       <header>
-        <h1>arcanis' projects</h1>
+        <h1>{{ page.title }}</h1>
         <p class="view">The list of some of my projects</p>
         <p class="view">
           {% for group in page.groups %}
