--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: arcanis' homepage
   <body>
     <div class="wrapper">
       <header>
-        <h1>arcanis' homepage</h1>
+        <h1>{{ page.title }}</h1>
 
         <p class="view"><a href="/blog/">My blog</a><br>
                         <a href="/projects/">My projects</a></p>
@@ -16,9 +16,19 @@ title: arcanis' homepage
 
       </header>
       <section>
+<!-- redirection to russian page -->
+  <script>
+    var languageinfo=navigator.language? navigator.language : navigator.userLanguage
+    function redirectpage(dest) {
+    if (window.location.replace) window.location.replace(dest)
+    else window.location=dest
+    }
+    if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/")
+  </script>
+<!-- redirection to russian page -->
 
 <h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/about">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I'm too lazy to write in English, thus some of my papers will be in Russian.</p>
+<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/about">the link</a>. I'm sorry I don't know html/php/ruby/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>.</p>
 
 <h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
 <p align="justify">If you have a question or something else you may <a href="/about">contact me</a>. If you want to suggest a pull request or to create a bug report for these pages (or may be for some other projects) feel free to visit <a href="https://github.com/arcan1s">my Github profile</a> and do it.</p>
