--- a/ru/about.html
+++ b/ru/about.html
@@ -4,39 +4,39 @@ layout: default
 comment: false
 share: true
 back: 1
-title: About me
+title: Обо мне
 ---
   <body>
     <div class="wrapper">
       <header>
-        <h1>About me</h1>
+        <h1>{{ page.title }}</h1>
 
-        <p class="view"><a href="https://github.com/arcan1s">GitHub Profile</a><br>
-        <a href="https://www.archlinux.org/trustedusers/#arcanis">TU Profile on <code>archlinux.org</code></a><br>
-        <a href="http://istina.msu.ru/profile/arcanis">Some of my publications</a><br>
-        PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
+        <p class="view">Профиль на <a href="https://github.com/arcan1s">GitHub</a><br>
+        <a href="https://www.archlinux.org/trustedusers/#arcanis">Профиль TU на <code>archlinux.org</code></a><br>
+        <a href="http://istina.msu.ru/profile/arcanis">Некоторые из моих публикаций</a><br>
+        PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01">0x31361F01</a></p>
 
-        <h2>Contacts</h2>
-        <p class="view">Alias: arcanis/arcan1s<br>
-        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a> <br>
+        <h2>Контакты</h2>
+        <p class="view">Алиас: arcanis/arcan1s<br>
+        IRC: <a href="irc://irc.freenode.net/arcan1s">arcan1s</a><br>
         ICQ: 407-398-235<br>
-        Jabber: arcanis (at) jabber (dot) org<br>
+        Jabber: arcanis (at) jabber (dot) ru<br>
         E-mail: <a href="mailto:darkarcanis@mail.ru">darkarcanis (at) mail (dot) ru</a></p>
 
       </header>
       <section>
 
-<p align="justify">My name is Evgeniy Alekseev and I'm from Siberia (seriously, I was born in <a href="https://maps.google.com/maps?f=q&source=s_q&hl=ru&geocode=&q=russia,+Krasnoyarskiy+kray,+Sosnovoborsk&aq=&sll=56.133333,93.366667&sspn=0.100635,0.326843&vpsrc=6&g=%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F,+Krasnoyarskiy+kray,+Sosnovoborsk&ie=UTF8&hq=&hnear=%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%B3%D0%BE%D1%80%D0%BE%D0%B4+%D0%A1%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BE%D0%B1%D0%BE%D1%80%D1%81%D0%BA,+%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D1%8F%D1%80%D1%81%D0%BA%D0%B8%D0%B9+%D0%BA%D1%80%D0%B0%D0%B9,+%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D1%8F&ll=56.316537,95.712891&spn=25.891057,83.671875&t=m&z=4&iwloc=A">Siberia</a>). In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="http://www.chem.msu.ru/">the Department of Chemistry</a>, Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
+<p align="justify">Меня зовут Евгений Алексеев, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте, обычно, <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/">Химического факультета</a> Московоского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
 
-<p align="justify">At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="smb://89.249.170.38/Music/">my home computer</a>. I just want to notice that I am <b>NOT A FREELANCER</b>. But you can suggest me some project (<b>not money</b>) and if I'll like it I'll do it.</p>
+<p align="justify">На досуге я пишу небольшие приложения на C, C++ and Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="smb://89.249.170.38/Music/">моем домашнем компьютере</a>. И да, я хочу заметить, что я <b>НЕ ФРИЛАНСЕР</b>. Но Вы можете предложить мне проект (<b>не деньги</b>) и, если он мне понравится, я возьмусь за него.</p>
 
-<p align="justify">Also I'm an <a href="https://www.archlinux.org/">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
-<blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
+<p align="justify">Также я являюсь пользователем <a href="https://www.archlinux.org/">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
+<blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">
 The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
-<p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">ArchWiki</a></p>
+<p align="right">&copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">ArchWiki</a></p>
 
-<p align="justify">All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:</p>
+<p align="justify">Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
 <pre><code>int i = 1;
 i = ++i + ++i;
 return i;</code></pre>
-<p align="justify">And the correct answer is <code>5</code> (or <code>6</code>, as you wish).</p>
+<p align="justify">Правильный ответ <code>5</code> (или <code>6</code>, как больше нравится).</p>
