--- a/ru/authors.html
+++ b/ru/authors.html
@@ -4,34 +4,36 @@ layout: default
 comment: false
 share: false
 back: 2
-title: Authors
+title: Авторы
 ---
   <body>
     <div class="wrapper">
       <header>
-        <h1>Authors</h1>
+        <h1>{{ page.title }}</h1>
       </header>
       <section>
 
-<p align="justify">The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk">Beerware</a> license:</p>
+<p align="justify">Код и контент данного сайта лицензирован под <a href="http://people.freebsd.org/~phk">Beerware</a>:</p>
 <blockquote><p align="justify">"THE BEER-WARE LICENSE" (Revision 42):<br>
 Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return</p></blockquote>
+<p align="justify">(Ну, в общем, там про пиво говорится. Запомните, Вы должны мне пиво.)</p>
 
-<p align="justify">The source theme was created by <a href="https://github.com/orderedlist/minimal">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported</a> License.</p>
+<p align="justify">Исходная тема была создана <a href="https://github.com/orderedlist/minimal">Steve Smith</a> и лицензирована под <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution-ShareAlike 3.0 Unported</a> License.</p>
 
-<p align="justify">The comment block was created by <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> and licensed under <a href="http://opensource.org/licenses/MIT">MIT</a> License.</p>
+<p align="justify">Блок комментариев был создан <a href="https://github.com/izuzak/izuzak.github.com">Ivan Žužak</a> и лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License.</p>
 
-<p align="justify">This site uses:
+<p align="justify">Данный сайт использует:
 <ul>
-  <li><a href="http://jekyllrb.com/">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT">MIT</a> License</li>
+  <li><a href="http://jekyllrb.com/">Jekyll</a>, который лицензирован под <a href="http://opensource.org/licenses/MIT">MIT</a> License</li>
 </ul></p>
 
-<p align="justify">Google Custom Search is licensed under own custom <a href="https://support.google.com/customsearch/answer/1714300">license</a>.</p>
+<p align="justify">Google Custom Search имеет собственную <a href="https://support.google.com/customsearch/answer/1714300">лицензию</a>.</p>
 
-<p align="justify">Sharethis have own custom <a href="http://www.sharethis.com/legal/publisher-terms-of-use">license</a> too.</p>
+<p align="justify">Sharethis тоже имеет собственную <a href="http://www.sharethis.com/legal/publisher-terms-of-use">лицензию</a>.</p>
 
-<p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> is licensed under <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
+<p align="justify"><a href="https://www.redhat.com/promo/fonts/">Liberation font</a> лицензирован под <a href="http://scripts.sil.org/OFL">The SIL Open Font</a> License.</p>
 
-<p align="justify">Special thanks to <a href="http://monztruo.deviantart.com/">Monztruo</a>, I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">his icon</a>.</p>
+<p align="justify">Отдельное спасибо <a href="http://monztruo.deviantart.com/">Monztruo</a>, я позаимствовал у него <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946">иконку</a>.</p>
 
 <p align="center">&copy; Evgeniy Alekseev, 2014</p>
+<p align="right"><small>Хотя, кого в России е%$т лицензии?</small></p>
