--- a/ru/index.html
+++ b/ru/index.html
@@ -4,37 +4,27 @@ layout: default
 comment: false
 share: true
 back: 0
-title: arcanis' homepage
+title: arcanis
 ---
   <body>
     <div class="wrapper">
       <header>
-        <h1>arcanis' homepage</h1>
+        <h1>{{ page.title }}</h1>
 
-        <p class="view"><a href="/blog/">My blog</a><br>
-                        <a href="/projects/">My projects</a></p>
-        <p class="view"><a href="/about">About me</a></p>
+        <p class="view"><a href="/ru/blog/">Мой блог</a><br>
+                        <a href="/ru/projects/">Мои проекты</a></p>
+        <p class="view"><a href="/ru/about">Обо мне</a></p>
 
       </header>
       <section>
-<!-- redirection to russian page -->
-<!--  <script>
-    var languageinfo=navigator.language? navigator.language : navigator.userLanguage
-    function redirectpage(dest) {
-    if (window.location.replace) window.location.replace(dest)
-    else window.location=dest
-    }
-    if (languageinfo.substr(0,2) == "ru") redirectpage("ru")
-  </script>-->
-<!-- redirection to russian page -->
 
-<h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-<p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/about">the link</a>. I'm sorry I don't know html/php/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>. Unfortunately, sometimes I'm too lazy to write in English, thus some of my papers will be in Russian.</p>
+<h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Добро пожаловать</h3>
+<p align="justify">Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне вы можете прочитать по <a href="/ru/about">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="https://github.com/arcan1s">моих проектов</a>.</p>
 
-<h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact me</h3>
-<p align="justify">If you have a question or something else you may <a href="/about">contact me</a>. If you want to suggest a pull request or to create a bug report for these pages (or may be for some other projects) feel free to visit <a href="https://github.com/arcan1s">my Github profile</a> and do it.</p>
+<h3><a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
+<p align="justify">Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/about">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="https://github.com/arcan1s">мой профиль на GitHub</a> и сделать это.</p>
 
-<h3><a name="search" class="anchor" href="#search"><span class="octicon octicon-link"></span></a>Site search</h3>
+<h3><a name="search" class="anchor" href="#search"><span class="octicon octicon-link"></span></a>Поиск по сайту</h3>
 <script>
   (function() {
     var cx = '000833618047197874644:rilf4jpvgyo';
