--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: arcanis' homepage
       if (window.location.replace) window.location.replace(dest)
       else window.location=dest
     }
-    if (document.referrer != "http://localhost:4000/ru/") {
+    if (document.referrer != "http://arcan1s.github.io/ru/") {
       var languageinfo=navigator.language? navigator.language : navigator.userLanguage
       if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/")
     }
